// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ATOMIZE RULESET ## NATIVE ## 01 (null) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 02 ({}) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    "color: red /*.*/",
    "margin: 0 /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    "color: red /*.*/",
  ],
  Array [
    "margin: 0 /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    "color: red /*.*/",
  ],
  Array [
    "color: blue /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    "color: red /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 08 atomizeRuleset({$web: atomizeRuleset({ color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    "color: green /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 11 with theme 1`] = `
Array [
  Array [
    "color: white /*.*/",
    "backgroundColor: darkgreen /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    "color: blue /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 2`] = `
Object {
  "$native": Object {
    "color": "green",
  },
  "$web": Object {
    "color": "red",
  },
  "color": "blue",
}
`;

exports[`ATOMIZE RULESET ## WEB ## 01 (null) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 02 ({}) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
    ".b { margin:0 /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
  Array [
    ".b { margin:0 /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
  Array [
    ".b { color:green /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 08 atomizeRuleset({$web: atomizeRuleset({ color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 11 with theme 1`] = `
Array [
  Array [
    ".a { color:white /*.*/ }",
    ".b { background-color:darkgreen /*.*/ }",
  ],
  Array [
    ".c { color:black /*.*/ }",
    ".d { background-color:lightblue /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    ".a { color:blue /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 12 ATOMIZE modifies source object 2`] = `
Object {
  "$native": Object {
    "color": "green",
  },
  "$web": Object {
    "color": "red",
  },
  "color": "blue",
}
`;
